Fix sizing of video div
This looked good in Firefox but the video was not showing up in the
right place in Chrome. The div containing the iframe was not large
enough to contain the video leading to some weird layout problems.

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,15 @@
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
 #navbar {
     display: flex;
     justify-content: space-between;
+    margin: 10px;
 }
 
 #search-button {
@@ -19,9 +28,14 @@
 #content {
     display: grid;
     grid-template-columns: 75% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-rows: auto auto auto auto;
     grid-auto-flow: column;
-    background-color: #f9f9f9
+    background-color: #f9f9f9;
+    flex-grow: 1;
+}
+
+#video {
+    height: 315px;
 }
 
 iframe {
